--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Git</title>
 </head>
 <body>
-	<h1>Hola Mundo</h1>
+	<div class="container">
+		<h1>Hola Mundo</h1>
+	</div>
 </body>
 </html>
